cleanup of MFLocator
and other cleanup